# s3-uploader

./: Cargo.toml
.cargo/: config.toml
.fso-amem/: project.toml
src/: main.rs
