[package]
edition = "2024"
name = "s3-uploader"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
mimalloc = { version = "0.1.48", features = [
    "extended",
    "local_dynamic_tls",
    "no_thp",
    "override",
] }
object_store = { version = "0.12.4", features = ["aws"] }
tokio = { version = "1.47.1", features = ["full"] }
